samples/_failures_safe/1761433588_208f57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31dd61a0.c: In function ‘main’:
./samples/SAFE/__tmp_31dd61a0.c:135:20: error: missing terminating " character
  135 |             printf("Enter elements for
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_31dd61a0.c:135:13: error: expected expression at end of input
  135 |             printf("Enter elements for
      |             ^~~~~~
./samples/SAFE/__tmp_31dd61a0.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31dd61a0.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31dd61a0.c:135:13: error: expected declaration or statement at end of input
